Bug #255405.  BinarySearchForPosition can generate invalid unicode for text measurement.  Make sure to not send half of a surrogate pair down to the font layer.  r+sr=roc